--- a/assignment.qmd
+++ b/assignment.qmd
@@ -42,21 +42,28 @@ Write your code using grouping in the chunks below to help answer the following 
 
 1)  How many members in the dataset favor impeachment vs. not (using the `for_impeachment` column)?
 
+    ANSWER: 209 favor impeachment. 26 do not.
+
 ```{r}
 
 
-
-
-
+impeach %>% 
+  group_by(for_impeachment) %>% 
+  summarise(for_impeachment = n())
 
 ```
 
-2)  Similar to #1 above, using grouping to now break down the Democratic House members by TWO measures: those who are for or against impeachment (as you did above)....and then districts above/below national GDP.  
-  
+2)  Similar to #1 above, using grouping to now break down the Democratic House members by TWO measures: those who are for or against impeachment (as you did above)....and then districts above/below national GDP.
+
 You'll want to ensure you do the grouping on both columns together, e.g. `group_by(column1, column2)`
+
+ANSWER: Of those who voted NO, there were 7 members ABOVE GPD national average and 19 members BELOW. Of those who voted YES, there were 126 members ABOVE GDP national average and 83 BELOW who voted Yes.
 
 ```{r}
 
+impeach %>% 
+  group_by(gdp_above_national, for_impeachment) %>% 
+  summarise(gdp_above_national = n()) 
 
 
 
@@ -70,10 +77,14 @@ You'll want to ensure you do the grouping on both columns together, e.g. `group_
 
 3)  Now do the same as #2, but this time instead of GDP, group by whether the district is above or below the national average for the percentage of college graduates. The column that captures this information is `pct_bachelors_compared_to_national`.
 
+ANSWER: Of those who voted NO on impeachment, there were 7 ABOVE national bachelors percentages and 19 BELOW. Of those who voted YES on impeachment, there were 128 ABOVE national bachelors percentages, and 81 BELOW.
+
 ```{r}
 
 
-
+impeach %>% 
+  group_by(for_impeachment, pct_bachelors_compared_to_national) %>% 
+  summarise(pct_bachelors_compared_to_national = n()) 
 
 
 
@@ -83,16 +94,19 @@ You'll want to ensure you do the grouping on both columns together, e.g. `group_
 
 ```
 
-4)  Let's look at the college graduation comparison in a slightly different way.  
-  
-Instead of counting how many districts are above/below the national average, this time summarize by the MEAN percentage of college grads (located in the column `pct_bachelors`) for districts that are Yes for impeachment vs. No.  
-  
+4)  Let's look at the college graduation comparison in a slightly different way.
+
+Instead of counting how many districts are above/below the national average, this time summarize by the MEAN percentage of college grads (located in the column `pct_bachelors`) for districts that are Yes for impeachment vs. No.
+
 In other words, you want to end up with the calculated mean for what that percentage is for the Yes districts and the No districts.
 
+ANSWER: For NO on impeachment districts, the average percent of bachelors degrees was 27.65%. For YES on impeachment districts, the average percent of bachelors degrees was 33.69%.
+
 ```{r}
 
-
-
+impeach %>% 
+  group_by(for_impeachment) %>% 
+  summarise(mean_pct = mean(pct_bachelors))
 
 
 
@@ -101,14 +115,16 @@ In other words, you want to end up with the calculated mean for what that percen
 
 ```
 
-5)  Do the same as #4, but this time show the MEAN *percentage of the vote that Donald Trump received* for districts that are Yes for impeachment vs. No.  
-The relevant column for that is `trump_percent`.
+5)  Do the same as #4, but this time show the MEAN *percentage of the vote that Donald Trump received* for districts that are Yes for impeachment vs. No.\
+    The relevant column for that is `trump_percent`.
+
+ANSWER: For NO on impeachment districts, the average Trump vote percent was 43.82%. For YES on impeachment districts, the average Trump vote percent was 32.04%.
 
 ```{r}
 
-
-
-
+impeach %>% 
+  group_by(for_impeachment) %>% 
+  summarise(mean_trump_pct = mean(trump_percent))
 
 
 
@@ -119,10 +135,15 @@ The relevant column for that is `trump_percent`.
 
 6)  Filter out only the members who are a yes for impeachment. Then of those "Yes" member, how many won their 2018 election by less than 5 percentage points (`margin_flag_2018`) vs. more?
 
+ANSWER: Of the YES votes, 17 members won their 2018 election by "5 points or less," versus 192 districts who won by more than 5 points.
+
 ```{r}
 
   
-
+impeach %>% 
+  filter(for_impeachment == "YES") %>% 
+  group_by(margin_flag_2018) %>% 
+  summarise(margin_flag_2018 = n())
 
 
 
@@ -133,10 +154,17 @@ The relevant column for that is `trump_percent`.
 
 7)  Come up with another breakdown of your choosing for how you'd like to examine this dataset. Say what you'll look at, and then put the code below to find the answer.
 
+QUESTION OF MY CHOOSING: Of members who voted No on impeachment, how many won their 2018 election by 5 points or less versus by more than 5 points?
+
+ANSWER: Of the NO votes, 9 members won their 2018 elections by 5 points or less. 17 members won their elections by more than 5 points.
+
 ```{r}
 
   
-
+impeach %>% 
+  filter(for_impeachment == "NO") %>% 
+  group_by(margin_flag_2018) %>% 
+  summarise(margin_flag_2018 = n())
 
 
 
@@ -145,8 +173,8 @@ The relevant column for that is `trump_percent`.
 
 ```
 
-7)  You'll see a column in the table called date_announced. For members who came out as a Yes for impeachment, this is the date they announced their support for it.  
-  
+7)  You'll see a column in the table called date_announced. For members who came out as a Yes for impeachment, this is the date they announced their support for it.
+
 Use the mutate() function to create two new columns: one that extracts the year from date_announced, and a second that extracts the month.
 
 ```{r}
@@ -161,7 +189,7 @@ Use the mutate() function to create two new columns: one that extracts the year 
 
 ```
 
-8) Using the new columns you created in #7, use grouping to count up how many House Democrats during each month announced their support of impeachment.
+8)  Using the new columns you created in #7, use grouping to count up how many House Democrats during each month announced their support of impeachment.
 
 ```{r}
 
@@ -174,6 +202,3 @@ Use the mutate() function to create two new columns: one that extracts the year 
 
 
 ```
-
-
-
